made the grid adjust its size dynamically, preventing overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -5,6 +11,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
+    background-color: #76ABAE;
 }
 
 #grid-wrapper {
@@ -14,15 +21,18 @@ body {
     justify-content: center;
     margin-top: 20px;
     overflow: hidden;
+    padding: 30px;
+    background-color: #31363F;
 }
 
 #container {
     display: flex;
     flex-wrap: wrap;
-    width: 85vh;
+    width: 80vh;
     max-width: 960px;
-    height: 85vh;
+    height: 80vh;
     max-width: 960px;
+    background-color: white;
 }
 
 .square {
@@ -33,4 +43,9 @@ body {
 
 #reset-button {
     margin-top: 20px;
+    padding: 20px;
+    background-color: #222831;
+    color: #EEEEEE;
+    margin-bottom: 10px;
+    border: 1.5px solid #EEEEEE;
 }
